<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoreInBusiness</string>
    <string name="title_section1">Approve Promotions</string>
    <string name="title_section2">Manage Items</string>
    <string name="title_section3">Manage Promotions</string>
    <string name="title_section4">Send Broadcast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_detail">ItemDetail</string>
    <string name="item_detail_title">Item Name</string>
    <string name="error_title">Oops Sorry !</string>
    <string name="item_detail_description">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse"</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="title_activity_add_promotion">AddPromotion</string>
    <string name="approve_promotion_title_promotion">Enter Promotional Code:</string>
    <string name="approve_approve_promotion">Approve Code</string>
    <string name="broadcast_title_broadcast">Broadcast Message</string>
    <string name="broadcast_button">Send Broadcast</string>
    <string name="item_detail_edit_button">Edit Items</string>
    <string name="item_detail_delete_item">Delete Item</string>
    <string name="item_detail_upload_button">Upload Image</string>
    <string name="item_detail_get_image">Get Image</string>
    <string name="top_items_add_button">Add Items</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="add_promotion_get_image">Get Image</string>
    <string name="add_promotion_submit">Submit</string>
    <string name="edit_promotion_delete">Delete</string>


</resources>