<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/promotionDetailStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailRequirement"
        android:ems="10"
        android:hint="Start Date i.e 2/12/2014 "
        android:inputType="date" />

    <EditText
        android:id="@+id/promotionDetailNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailSpinner"
        android:ems="10"
        android:hint="Name of Promotion" />

    <EditText
        android:id="@+id/promotionDetailRequirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailNameField"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Requirement of Promotion" />

    <EditText
        android:id="@+id/promotionDetailEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailStartDate"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="End Date i.e 2/2/2015"
        android:inputType="date" />

    <Button
        android:id="@+id/promotionDetailSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/promotionDetailGetImage"
        android:layout_alignParentRight="true"
        android:text="@string/add_promotion_submit" />

    <EditText
        android:id="@+id/promotionDetailRewardPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailClaimable"
        android:ems="10"
        android:hint="Reward for Promotion"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/promotionDetailClaimable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailEndDate"
        android:text="Limited Promotion" />

    <EditText
        android:id="@+id/promotionDetailQuota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/promotionDetailRewardPoint"
        android:ems="10"
        android:hint="Quota of Promotion"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/promotionDetailGetImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:text="@string/add_promotion_get_image" />

    <Button
        android:id="@+id/promotionDetailDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/promotionDetailSubmit"
        android:layout_alignRight="@+id/promotionDetailQuota"
        android:text="@string/edit_promotion_delete" />

</RelativeLayout>